<?xml version="1.0"?>
<package format="2">
  <name>m20control</name>
  <version>0.0.1</version>
  <description>ROS bridge nodes for sending navigation commands to the M20 motion controller.</description>

  <maintainer email="xuyuanfei@mail.ustc.edu.cn">xu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export/>
</package>
