<?xml version="1.0"?>
<package>
  <name>sophus</name>
  <version>1.0.0</version>
  <description>Catkin wrapper for Sophus library used by Omni-LIVO.</description>

  <maintainer email="xu@example.com">xu</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>

  <export/>
</package>
