cmake_minimum_required(VERSION 3.3)
project(lidars1)

# Avoid OpenCV ABI mismatch with ROS Noetic's cv_bridge (OpenCV 4.2 on Ubuntu 20.04).
if(EXISTS "/usr/lib/x86_64-linux-gnu/cmake/opencv4/OpenCVConfig.cmake")
  set(OpenCV_DIR "/usr/lib/x86_64-linux-gnu/cmake/opencv4")
endif()
find_package(OpenCV REQUIRED)

if($ENV{ROS_VERSION} EQUAL 1)
  find_package(catkin QUIET COMPONENTS roscpp)
  add_definitions(-DROS1_ENABLED=1)
elseif($ENV{ROS_VERSION} EQUAL 2)
  find_package(ament_cmake QUIET)
  add_definitions(-DROS2_ENABLED=1)
endif()

if (catkin_FOUND)
  message(STATUS "ROS *1* version found, building ROS1.cmake")
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ROS1.cmake)
elseif (ament_cmake_FOUND)
  message(STATUS "ROS *2* version found, building ROS2.cmake")
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ROS2.cmake)
else ()
  message(STATUS "No ROS versions found, building ROS1.cmake")
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ROS1.cmake)
endif ()
