<?xml version="1.0"?>
<package format="2">
  <name>nav_launch</name>
  <version>0.0.0</version>
  <description>The jushen package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jushen@todo.todo">jushen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>global_planner</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
